force-app/main/default/objects/Account/fields/Bordeaux__c.field-meta.xml
<CustomField>
    <fullName>Bordeaux__c</fullName>
    <description>dthdfdfh</description>
    <label>Bordeaux</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>