force-app/main/default/objects/Account/fields/Boulogne__c.field-meta.xml
<CustomField>
    <fullName>Boulogne__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Description</description>
    <label>Boulogne</label>
    <type>Checkbox</type>
</CustomField>