force-app/main/default/objects/Account/fields/DreamforceField__c.field-meta.xml
<CustomField>
    <fullName>DreamforceField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Here is our new Dreamforce field !</description>
    <label>Dreamforce Field</label>
    <type>Checkbox</type>
</CustomField>