force-app/main/default/objects/Account/fields/Forme_juridique__c.field-meta.xml
<CustomField>
    <fullName>Forme_juridique__c</fullName>
    <description>Provient de l&apos;org SF de CARRENET</description>
    <label>Forme_juridique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>association</fullName>
                <label>Association</label>
            </value>
            <value>
                <fullName>parapublic</fullName>
                <label>Parapublic</label>
            </value>
            <value>
                <fullName>public</fullName>
                <label>Public</label>
            </value>
            <value>
                <fullName>societe</fullName>
                <label>Société</label>
            </value>
            <value>
                <fullName>autres</fullName>
                <label>[...] Autres</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>