force-app/main/default/objects/Account/fields/LaDefense__c.field-meta.xml
<CustomField>
    <fullName>LaDefense__c</fullName>
    <defaultValue>false</defaultValue>
    <description>blabla</description>
    <label>La Defense</label>
    <type>Checkbox</type>
</CustomField>