force-app/main/default/objects/Account/fields/NewField__c.field-meta.xml
<CustomField>
    <fullName>NewField__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Demo Nico</description>
    <label>NewField</label>
    <type>Checkbox</type>
</CustomField>