force-app/main/default/objects/Account/fields/OhYeah__c.field-meta.xml
<CustomField>
    <fullName>OhYeah__c</fullName>
    <defaultValue>false</defaultValue>
    <description>:) :)</description>
    <label>Oh Yeah</label>
    <type>Checkbox</type>
</CustomField>