force-app/main/default/objects/Account/fields/QuickDeployField__c.field-meta.xml
<CustomField>
    <fullName>QuickDeployField__c</fullName>
    <label>QuickDeployField</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>