force-app/main/default/objects/Account/fields/VernonField__c.field-meta.xml
<CustomField>
    <fullName>VernonField__c</fullName>
    <description>this is the vernon field !</description>
    <label>VernonField</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>